--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,15 @@
     <version>0.1.0</version>
 
     <dependencies>
-        <dependency>
+      <dependency>
         <groupId>com.datastax.cassandra</groupId>
         <artifactId>cassandra-driver-core</artifactId>
         <version>3.3.0</version>
+      </dependency>
+      <dependency>
+        <groupId>joda-time</groupId>
+        <artifactId>joda-time</artifactId>
+        <version>2.9.9</version>
       </dependency>
     </dependencies>
 
