--- a/config.json
+++ b/config.json
@@ -1,4 +1,7 @@
 {
   "replication": "CREATE KEYSPACE dev with REPLICATION = {'class': 'SimpleStrategy', 'replication_factor': 1}",
-  "rows": "10000"
+  "rows": "376680",
+  "threads": "4",
+  "stations": "4",
+  "hostname": "localhost"
 }
