--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "replication": "CREATE KEYSPACE dev with REPLICATION = {'class': 'SimpleStrategy', 'replication_factor': 1}",
   "rows": "376680",
   "threads": "4",
-  "stations": "4",
-  "hostname": "localhost"
+  "stations": "10",
+  "hostname": "localhost",
+  "hostnames": ["localhost", "localhost"]
 }
